--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div id="logo">
             <!-- Commentaire pour le logo -->
-            <img src="Images/logo.png" alt="Logo">
+			<img src="Images/logo.png" alt="Nom de votre entreprise">
         </div>
         <nav>
             <!-- Commentaire pour le menu de navigation -->
@@ -31,12 +31,13 @@
      </section>
     
      <section id="services">
-        <h2>Nos services</h2>
-        <div class="service">
+        
+         <div class="service">
+			<h2>Mes services</h2>
             <!-- Commentaire pour le service 1 -->
             <h3>Service 1</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
+         </div>
         <div class="service">
             <!-- Commentaire pour le service 2 -->
             <h3>Service 2</h3>
