--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Titre de la page</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="JavaScript" href="JS/script.js">
+    <script src="script.js"></script>
  </head>
 
  <body>
 
     <header>
+      <section id="head">
         <div id="logo">
             <!-- Commentaire pour le logo -->
 			<img src="Images/logo.png" alt="Nom de votre entreprise">
@@ -25,6 +27,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+      </section>
     </header>
 
 	<main>
@@ -70,6 +73,7 @@
         </div>
       </section>
     </main>
+
     <main>
       <section id="contact">
             <h2>Contactez-moi</h2>
