--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <nav>
             <!-- Commentaire pour le menu de navigation -->
             <ul>
-                <li><a href="#intro">Accueil</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#intro">Accueil<span class="button"></span></a></li>
+                <li><a href="#services">Services<span class="button"></span></a></li>
+                <li><a href="#contact">Contact<span class="button"></span></a></li>
             </ul>
         </nav>
       </section>
@@ -34,9 +34,18 @@
     <!-- Commentaire pour la section principale -->
       <section id="intro">
         <h1>Bienvenue sur mon site</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam finibus malesuada libero, at commodo nulla lacinia a. Suspendisse quis turpis vitae neque pretium hendrerit. Etiam eu lacus et quam sagittis ultricies non sed nulla. Fusce bibendum suscipit tellus, ut viverra purus. Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum luctus lobortis justo at lobortis. Nullam vel erat finibus, sodales justo eget, iaculis nisl. Sed vel magna tincidunt, bibendum quam sit amet, vestibulum lorem.</p>
+          <p>Bonjour et bienvenue sur mon site test ! Je suis ravi de vous accueillir sur cette plateforme dédiée à l'expérimentation et à l'amélioration de mes services en ligne.
+
+            Mon objectif est de créer une expérience utilisateur fluide et agréable pour mes visiteurs, et pour cela, j'ai besoin de votre aide. En explorant mon site test, vous pourrez m'aider à identifier les éventuels problèmes ou bugs, et me donner des suggestions pour améliorer mes fonctionnalités.
+            
+            J'ai conçu ce site test de manière à ce qu'il reflète les différentes phases de développement d'un site internet, depuis la phase de conception jusqu'à la mise en ligne finale. Vous pourrez ainsi découvrir les différentes étapes de création d'un site, et participer à son amélioration en partageant vos impressions avec moi.
+            
+            Je suis très heureux de pouvoir compter sur votre aide pour améliorer mon site et rendre l'expérience utilisateur encore meilleure. J'espère que vous apprécierez votre visite sur mon site test, et je vous remercie d'avance pour votre contribution précieuse à mon projet.
+          </p>
         <h2>Créer du contenu :</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam finibus malesuada libero, at commodo nulla lacinia a. Suspendisse quis turpis vitae neque pretium hendrerit. Etiam eu lacus et quam sagittis ultricies non sed nulla. Fusce bibendum suscipit tellus, ut viverra purus. Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum luctus lobortis justo at lobortis. Nullam vel erat finibus, sodales justo eget, iaculis nisl. Sed vel magna tincidunt, bibendum quam sit amet, vestibulum lorem.</p>
+          <p>
+            Contenu en attente !
+          </p>
         <h2>Présentation:</h2>
           <p>Bonjour ! Je suis ravi de faire votre connaissance. Je suis un étudiant en développement web débutant et j'ai décidé de me lancer dans la création de mon premier site web en utilisant les langages HTML, CSS et JavaScript.
 
