--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     
       <section id="services">
         <div id="titre">
-            <h2>Mes services :</h2>
+            <div id="titre">
+                <h2>Mes services :</h2>
+            </div>
         </div>
         <div class="service">
             <!-- Commentaire pour le service 1 -->
@@ -96,17 +98,22 @@
                   un processus continu de perfectionnement.
                  C'est ainsi que l'on peut atteindre le succès dans la création de sites web.
             </p>
-            <div class="cadre-video">
+             <div class="cadre-video">
                 <video width="560" height="315" controls>
                     <source src="/Video/chevalier.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                  </video> 
+                </video> 
             </div>
         </div>
         <div class="service">
             <!-- Commentaire pour le service 3 -->
             <h3>Service 3:</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="mini-jeu">
+                <video width="560" height="315" controls>
+                    <source src="/Video/vaisseau_jeu.mp4" type="video/mp4">
+                </video>  
+            </div>
+            <a href="https://example.com">Lien vers un site web de mon jeu</a>
         </div>
       </section>
     </main>
