--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <source src="/Video/vaisseau_jeu.mp4" type="video/mp4">
                 </video>  
             </div>
-            <a href="https://example.com">Lien vers un site web de mon jeu</a>
+            <a href="https://benben121212.github.io/PresentationJeuVideo/">Lien vers un site web de mon jeu</a>
         </div>
       </section>
     </main>
